--- a/Shadow Frontiers/mod.ini
+++ b/Shadow Frontiers/mod.ini
@@ -1,18 +1,23 @@
 [Desc]
-Title="Shadow Frontiers"
-Description=""
-Version=1.0
-Date="2022-11-12"
 Author="Luna"
+Title="Definitive Shadow"
+Version=2.0
+Description=""
+Date="2022-11-12"
 AuthorURL=""
 
 [Main]
-UpdateServer=""
+UpdateServer="https://raw.githubusercontent.com/Wunaa/ShadowFrontiersUpdateServer/main/Shadow%20Frontiers"
 SaveFile=""
-ID=""
-IncludeDir0="."
-IncludeDirCount=1
+ID="7AEC92E8"
+IncludeDir0="main"
+IncludeDir1="super_slv"
+IncludeDir2="anm_skate"
+IncludeDir3="sh_jukebox"
+IncludeDir4="UI_sh_wht"
+IncludeDir5="main"
+IncludeDirCount=6
 DependsCount=0
 DLLFile=""
 CodeFile=""
-ConfigSchemaFile=""
+ConfigSchemaFile="config.json"
