--- a/Shadow Frontiers/mod.ini
+++ b/Shadow Frontiers/mod.ini
@@ -1,9 +1,9 @@
 [Desc]
-Author="Luna"
 Title="Definitive Shadow"
-Version=2.0
 Description=""
+Version=2.0.1
 Date="2022-11-12"
+Author="Luna, TCM_Pin"
 AuthorURL=""
 
 [Main]
@@ -14,9 +14,8 @@ IncludeDir0="main"
 IncludeDir1="super_slv"
 IncludeDir2="anm_skate"
 IncludeDir3="sh_jukebox"
-IncludeDir4="UI_sh_wht"
-IncludeDir5="main"
-IncludeDirCount=6
+IncludeDir4="UI_sh_redblk"
+IncludeDirCount=5
 DependsCount=0
 DLLFile=""
 CodeFile=""
