--- a/Shadow Frontiers/mod.ini
+++ b/Shadow Frontiers/mod.ini
@@ -1,7 +1,7 @@
 [Desc]
 Title="Definitive Shadow"
 Description=""
-Version=2.0.2
+Version="2.0.3"
 Date="2022-11-12"
 Author="Luna, TCM_Pin"
 AuthorURL=""
@@ -11,10 +11,10 @@ UpdateServer="https://raw.githubusercontent.com/Wunaa/ShadowFrontiersUpdateServe
 SaveFile=""
 ID="7AEC92E8"
 IncludeDir0="main"
-IncludeDir1="super_slv"
-IncludeDir2="anm_skate"
-IncludeDir3="sh_jukebox"
-IncludeDir4="UI_sh_redblk"
+IncludeDir1="super_ylw"
+IncludeDir2="anm_hover"
+IncludeDir3="main"
+IncludeDir4="UI_sh_red"
 IncludeDirCount=5
 DependsCount=0
 DLLFile=""
